  even if the job is canceled.
- Fixed seg fault in restore of multiple simultaneous jobs to 
  a single Volume.
- Fixed thread race problem in multiple simultaneous jobs to
  a single Volume where the volume lable is not in the first 
  tape block, so the tape is not recognized.

Other Changes since 1.32d
- Restore directory tree automatically selects all higher level
  directories to be restored.
- Implement conio.c to use in console program -- mini-readline.
- Enhance "fill" command of btape -- simpler output. Use -v to
  cause last block to be dumped after write and after re-read.
- Added an autochanger test to the btape "test" command. It is 
  automatically invoked if the autochanger is properly configured.  It
  is still a bit primitive but covers the essential of testing
  the mtx-changer script with your autochanger.
- Select the oldest LastWritten volume during recycling.
- Added forward space file test to btape "test" command.
- All 1.32d patches applied.
- Fixed seg fault in restore of multiple simultaneous jobs to 
  a single Volume.
- Fixed thread race problem in multiple simultaneous jobs to
  a single Volume where the volume lable is not in the first 
  tape block, so the tape is not recognized.

Items to note:  !!!!!
- FreeBSD users NOTE!!!!!
  You MUST add the following two records to your SD Device resource for
  tape drives.

     TWOEOF = yes
     Fast Forward Space File = no

- The daemon protocol has changed, you must update everything at once.
- The database level has been updated. You must either re-initialize
  your databases with:
   
    ./drop_bacula_tables
    ./make_bacula_tables

  which will delete ALL prior catalog information, or you can
  update your database with:

    ./update_bacula_tables
- smtp has now become bsmtp
- console has now become bconsole.
- console.conf is now bconsole.conf
- Please don't underestimate the repercussions of the bsmtp and bconsole 
  name changes!